--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="box2">
                     <h2>QuizBoard</h2>
-                    <!-- <img src="./img/images-removebg-preview.png"> -->
+                    <img src="./img/images-removebg-preview.png">
                     <hr>
                     <div class="questions">
                         <div class="question1">
