feat:display button- This beautifies the display container

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     
                     <input type="button" value="Submit" id="Btn" onclick="myClass()">
-                    <div id="empty"><h1>The score Shhet</h1></div>
+                    <div id="empty"><h3>Show Results</h3></div>
 
 
                 </div>
