--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                     </div>
                     
                     <input type="button" value="Submit" id="Btn" onclick="myClass()">
-                    <div id="empty"><h3>Show Results</h3></div>
+                    <div id="empty">Show Your Score<h3>
+
+                    </h3></div>
 
 
                 </div>
