feat:Css display text- beautifies the display text

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     </div>
                     
                     <input type="button" value="Submit" id="Btn" onclick="myClass()">
-                    <div id="empty">Show Your Score<h3>
+                    <div id="empty"><h3>Show Your Score</h3></div>
 
-                    </h3></div>
+                    
 
 
                 </div>
