st:questions styling - adds some font changes to the questions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <hr>
                     <div class="questions">
                         <div class="question1">
-                            <p>What is Short form of HTML?</p>
+                            <h4>What is Short form of HTML?</h4>
                             <P><input type="radio" name="quiz1" value="html">HTML</P>
                             <P><input type="radio" name="quiz1" value="hmlt">hmlt</P>
                             <P><input type="radio" name="quiz1" value="mlht">MLHT</P>
@@ -30,7 +30,7 @@
                         </div>
     
                         <div class="question2">
-                            <p>What is the other name for Javascript?</p>
+                            <h4>What is the other name for Javascript?</h4>
                             <P><input type="radio" name="quiz2" value="ECMAscript">ECMAscript</P>
                             <P><input type="radio" name="quiz2" value="js">JS</P>
                             <P><input type="radio" name="quiz2" value="css">CSS</P>
@@ -39,7 +39,7 @@
                         <br>
 
                         <div class="question3">
-                            <p>Is C++ a low level language?</p>
+                            <h4>Is C++ a low level language?</h4>
                             <P><input type="radio" name="quiz3" value="yes">YES</P>
                             <P><input type="radio" name="quiz3" value="no">NO</P>     
                         </div>
